crates/hird-check/tests/snapshots/inference__redundant_arm_after_wildcard.snap
---
source: crates/hird-check/tests/inference.rs
assertion_line: 377
expression: "check_str(\"type Option<a> = Some(a) | None\\n\\\n         fn f(opt: Option<Int>) -> Int = match opt {\\n\\\n           _ -> 0,\\n\\\n           Some(x) -> x,\\n\\\n         }\")"
---
None : ∀a. Option<a>
Some : ∀a. a → Option<a>
f : Option<Int> → Int
warning[C0016] 83..91: unreachable match arm: this pattern is already covered
