crates/hird-check/tests/snapshots/inference__row_variable_cannot_be_fixed_empty_by_a_pure_declaration.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(r\"fn run(g: Int -> Int ! {r}) -> Int = g(0)\")"
---
run : ∀r. (Int → Int ! {r}) → Int
error[C0061] 36..41: row variable `r` is polymorphic in the signature, but the body fixes it to `{}`
