crates/hird-check/tests/snapshots/inference__row_variable_cannot_hide_a_body_effect.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(&format!(\"{SAY}fn sneaky(n: Int) -> Int ! {{r}} = helper(n)\"))"
---
helper : Int → Int ! {Tool<Say>}
say : { message: String } → () ! {Tool<Say>}
sneaky : ∀r. Int → Int ! {r}
error[C0061] 136..146: row variable `r` is polymorphic in the signature, but the body fixes it to `{Tool<Say>}`
