crates/hird-check/tests/snapshots/inference__row_variable_in_return_type_cannot_hide_a_lambda_effect.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(&format!(\"{SAY}fn wrap(n: Int) -> (Int -> Int ! {{r}}) = \\\\x -> helper(x)\"))"
---
helper : Int → Int ! {Tool<Say>}
say : { message: String } → () ! {Tool<Say>}
wrap : ∀r. Int → (Int → Int ! {r})
error[C0061] 143..159: row variable `r` is polymorphic in the signature, but the body fixes it to `{Tool<Say>}`
